improvement Group.java