@@ -7,11 +7,12 @@ import org.testng.annotations.Test;
 
 import java.time.Duration;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
+import static com.sdl.selenium.utils.MatcherAssertList.assertThatList;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
+import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.core.IsEqual.equalTo;
 
 public class GroupIntegrationTest extends TestBase {
@@ -38,32 +39,32 @@ public class GroupIntegrationTest extends TestBase {
         List<List<String>> cellsText = grid.getCellsText("Cuisine: American");
         List<List<String>> lists;
         if ("6.0.2".equals(version)) {
-            lists = Arrays.asList(
-                    Collections.singletonList("Cheesecake Factory"),
-                    Collections.singletonList("Creamery"),
-                    Collections.singletonList("Crepevine"),
-                    Collections.singletonList("Gordon Biersch"),
-                    Collections.singletonList("MacArthur Park"),
-                    Collections.singletonList("Old Pro"),
-                    Collections.singletonList("Shokolaat"),
-                    Collections.singletonList("Slider Bar"),
-                    Collections.singletonList("University Cafe")
+            lists = List.of(
+                    List.of("Cheesecake Factory"),
+                    List.of("Creamery"),
+                    List.of("Crepevine"),
+                    List.of("Gordon Biersch"),
+                    List.of("MacArthur Park"),
+                    List.of("Old Pro"),
+                    List.of("Shokolaat"),
+                    List.of("Slider Bar"),
+                    List.of("University Cafe")
             );
         } else {
-            lists = Arrays.asList(
-                    Arrays.asList("Cheesecake Factory", "American"),
-                    Arrays.asList("Creamery", "American"),
-                    Arrays.asList("Crepevine", "American"),
-                    Arrays.asList("Gordon Biersch", "American"),
-                    Arrays.asList("MacArthur Park", "American"),
-                    Arrays.asList("Old Pro", "American"),
-                    Arrays.asList("Shokolaat", "American"),
-                    Arrays.asList("Slider Bar", "American"),
-                    Arrays.asList("The Old Shoe", "American"),
-                    Arrays.asList("University Cafe", "American")
+            lists = List.of(
+                    List.of("Cheesecake Factory", "American"),
+                    List.of("Creamery", "American"),
+                    List.of("Crepevine", "American"),
+                    List.of("Gordon Biersch", "American"),
+                    List.of("MacArthur Park", "American"),
+                    List.of("Old Pro", "American"),
+                    List.of("Shokolaat", "American"),
+                    List.of("Slider Bar", "American"),
+                    List.of("The Old Shoe", "American"),
+                    List.of("University Cafe", "American")
             );
         }
-        assertThat(cellsText, contains(lists.toArray()));
+        assertThatList("Actual values: ", cellsText, containsInAnyOrder(lists.toArray()));
     }
 
     @Test
@@ -82,7 +83,7 @@ public class GroupIntegrationTest extends TestBase {
     @Test
     void rowTest5() {
         Group group = new Group(grid, "American");
-        Row old = group.getRow(new Cell(1, "Old"));
+        Row old = group.getRow(new Cell(1, "Old Pro"));
         String text = old.getCell(1).getText();
         assertThat(text, equalTo("Old Pro"));
     }
